# NU6560001_IA_HealthCheck_MS

./: .gitignore  Dockerfile  README.md  requirements.txt
.github/workflows/: ci.yml
healthcheck_ms/: pyproject.toml
healthcheck_ms/.github/workflows/: ci.yml
healthcheck_ms/src/app/: main.py
healthcheck_ms/src/app/api/: health_check.py
healthcheck_ms/tests/acceptance/: test_health_check_acceptance.py
healthcheck_ms/tests/e2e/: test_health_check_acceptance.py
healthcheck_ms/tests/performance/: test_health_check_benchmark.py
healthcheck_ms/tests/unit/: test_health_check.py
