[tool.poetry]
name = "python-microservice"
version = "0.1.0"
description = """
Microservicio Python ultra-ligero y robusto para monitoreo de sistemas.
Expone un endpoint RESTful (/health) que responde en JSON el estado de salud del sistema, ideal para integraciones con orquestadores, balanceadores y plataformas cloud-native.
Incluye:
- Documentación Swagger automática
- Logging profesional
- Manejo global de errores
- CORS listo para microservicios modernos

Powered by Flask + Clean Architecture

Autor Dev: Mateo Cruz Oviedo
"""
authors = ["Mateo Cruz Oviedo <gmcruz@bancolombia.com.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.2"
werkzeug = "2.2.2"
flask-cors = "3.0.10"
flasgger = "*"
requests = "2.26.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
Flask-Testing = "0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"